// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardCenterpiece should match snapshot if selection is favorites 1`] = `
<div
  className="card-centerpiece"
>
  <div
    className="fav-total-wrapper"
  >
    <i
      className="fas fa-journal-whills total-fav-icon"
    />
    <h4
      className="fav-count-display"
    />
  </div>
  <i
    className="fab fa-jedi-order centerpiece-icon"
  />
  <h3
    className="centerpiece-text"
  />
  <p
    className="centerpiece-fav-text"
  >
    tap to save data
  </p>
</div>
`;

exports[`CardCenterpiece should match snapshot if selection is not people/planets/vehicles/favorites 1`] = `
<div
  className="card-centerpiece"
>
  <div
    className="fav-total-wrapper"
  >
    <i
      className="fas fa-journal-whills total-fav-icon"
    />
    <h4
      className="fav-count-display"
    />
  </div>
  <i
    className="fab fa-jedi-order centerpiece-icon"
  />
  <h3
    className="centerpiece-text"
  />
  <p
    className="centerpiece-fav-text"
  >
    tap to save data
  </p>
</div>
`;

exports[`CardCenterpiece should match snapshot if selection is people 1`] = `
<div
  className="card-centerpiece"
>
  <div
    className="fav-total-wrapper"
  >
    <i
      className="fas fa-journal-whills total-fav-icon"
    />
    <h4
      className="fav-count-display"
    />
  </div>
  <i
    className="fab fa-jedi-order centerpiece-icon"
  />
  <h3
    className="centerpiece-text"
  >
    Persons of Interest
  </h3>
  <p
    className="centerpiece-fav-text"
  >
    tap to save data
  </p>
</div>
`;

exports[`CardCenterpiece should match snapshot if selection is planets 1`] = `
<div
  className="card-centerpiece"
>
  <div
    className="fav-total-wrapper"
  >
    <i
      className="fas fa-journal-whills total-fav-icon"
    />
    <h4
      className="fav-count-display"
    />
  </div>
  <i
    className="fab fa-jedi-order centerpiece-icon"
  />
  <h3
    className="centerpiece-text"
  >
    Locations of Interest
  </h3>
  <p
    className="centerpiece-fav-text"
  >
    tap to save data
  </p>
</div>
`;

exports[`CardCenterpiece should match snapshot if selection is vehicles 1`] = `
<div
  className="card-centerpiece"
>
  <div
    className="fav-total-wrapper"
  >
    <i
      className="fas fa-journal-whills total-fav-icon"
    />
    <h4
      className="fav-count-display"
    />
  </div>
  <i
    className="fab fa-jedi-order centerpiece-icon"
  />
  <h3
    className="centerpiece-text"
  >
    Available Conveyance
  </h3>
  <p
    className="centerpiece-fav-text"
  >
    tap to save data
  </p>
</div>
`;
